# sdlGPU

./: .gitignore  CMakeLists.txt  README.md
shaders/compiled/: Color.frag.spv  PositionColor.vert.spv  test.frag.spv  test.vert.spv
shaders/src/test/: Color.frag.hlsl  PositionColor.vert.hlsl  test.vert  test.vert.hlsl
src/: common.hpp  main.cpp
src/Renderer/: Buffer.cpp  Buffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp  renderer.cpp  renderer.hpp
src/shaders/test/: test.vert.spirv
